<resources>
    <string name="app_name">Faircorp</string>

    <string name="app_logo_description">Faircorp logo</string><string name="menu_windows">Building windows</string>
    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>
    <string name="text_gen_info">General information</string>
    <string name="act_main_welcome">Welcome on faircorp, the app to manage building windows</string>
    <string name="act_main_open_window">Open window</string>
    <string name="act_light_name">Ligth name</string>
    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_ct_temp">20</string>
    <string name="act_tt_temp">20</string>
    <string name="act_window_room_target_temp">Target room temperature</string>
    <string name="act_window_room_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>
    <string name="text_gen">FairCorp</string>
    <string name="text_room1">Room 1</string>
    <string name="text_room2">Room 2</string>
    <string name="text_room3">Room 3</string>
    <string name="text_room4">Room 4</string>
    <string name="text_window1">Window 1</string>
    <string name="text_window2">Window 2</string>
    <string name="text_window3">Window 3</string>
    <string name="choose_r">Select Room:</string>
    <string name="choose_w">Select Window:</string>
    <string name="text_menu_udate">Update Windows</string>
    <string-array name="rooms_array">
        <item>Room 1</item>
        <item>Room 2</item>
        <item>Room 3</item>
        <item>Room 4</item>
    </string-array>

</resources>