<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WindowActivity"
    android:background="@drawable/mainback">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_compact"
        android:text="@string/act_window_name"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_window_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_compact"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#919191"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_compact"
        android:text="@string/act_window_room"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/txt_window_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_window_name" />

    <TextView
        android:id="@+id/txt_room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_compact"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#919191"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_compact"
        android:text="@string/act_window_room_current_temp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/txt_room_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_room_name" />

    <TextView
        android:id="@+id/txt_window_current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_compact"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#919191"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_compact"
        android:text="@string/act_window_room_target_temp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/txt_window_current_temperature"
        app:layout_constraintTop_toBottomOf="@+id/txt_window_current_temperature" />

    <TextView
        android:id="@+id/txt_window_target_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_compact"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#919191"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/txt_window_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_compact"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#919191"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_compact"
        android:text="@string/act_window_status"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/txt_window_target_temperature"
        app:layout_constraintTop_toBottomOf="@+id/txt_window_target_temperature" />

</androidx.constraintlayout.widget.ConstraintLayout>